Rework binary database for GeoIP ranges